2008-06-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-protocol.py.in: Set verbose to 5 so messages are printed.
	(UGAMEProtocolTestCase.testConnectionLost): Added output search.

2008-06-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test01_rsync_ok): Added search for
	PokerRsync::spawn message.
	(PokerChildrenTestCase.test04_rsync_fail_host_does_not_respond):
	Added search for ERROR: PokerRsync message.
	(PokerChildrenTestCase.test05_rsync_fail_no_network): Added search
	for processEnded message.
	(PokerChildrenTestCase.test12_testErrorFunction): Wrote method.
	(PokerChildrenTestCase.test01_rsync_ok.rsync_done): Added test for
	outReceived().

2008-06-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in (PokerChildrenTestCase): Switched
	to @SLEEP@ throughout.

	* configure.ac: Now checks for touch and sets @TOUCH@.

	* debian/control.unstable (Build-Depends): Added coreutils.

	* debian/control.lenny (Build-Depends): Added coreutils.

	* debian/control.hardy (Build-Depends): Added coreutils.

	* debian/control.gutsy (Build-Depends): Added coretuils.

	* debian/control.feisty (Build-Depends): Added coreutils.

	* debian/control.etch (Build-Depends): Added coreutils.

	* debian/control.edgy (Build-Depends): Added coreutils.

	* debian/control.dapper (Build-Depends): Added coreutils.

	* debian/control (Build-Depends): Added coreutils.

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test10_neverReady): Wrote method.
	(PokerChildrenTestCase.test11_spawnInDir): Wrote method.

2008-06-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	check for command line output.

2008-06-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test06_child_kill_missing_pid.process_kill):
	Wrote method.
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added